# UFlow

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
crates/uf-acl-sys/: Cargo.toml  build.rs
crates/uf-acl-sys/src/: lib.rs
crates/uf-core/: Cargo.toml
crates/uf-core/src/: idl.rs  lib.rs
crates/uf-daemon/: Cargo.toml
examples/phasea03/: overlay_process.cpp  writer_process.cpp
examples/phasea08/: probe_qwen_l2_prefill_layer_split.py  pypto_external_event_smoke.py  run_gate_a_remote.sh  run_gate_b_prefill_layer_remote.sh  run_gate_c_remote.sh  run_gate_d_event_prefill_remote.sh  run_gate_d_real_weights_remote.sh  run_gate_h0_hotpath_remote.sh  run_h2d_bandwidth_saturation_remote.sh  uflow_a08_trace_report.py  uflow_gate_a_smoke.py  uflow_gate_h0_hotpath_smoke.py  uflow_h2d_bandwidth_saturation.py  uflow_phasee_idl_gate_a.py  uflow_transfer_completion_event_probe.py
examples/phasea09/: uflow_l3_device_tensor_probe.py
examples/phaseb01/: uflow_b01_ssd_object_smoke.py
examples/phaseb02/: uflow_b02_ssd_ddr_transfer_smoke.py
examples/phaseb03/: uflow_b03_ssd_hbm_relay_smoke.py
examples/phaseb04/: run_direct_candidates_remote.sh  uflow_b04_analyze_candidate_matrix.py  uflow_b04_ssd_hbm_direct_candidates.py
examples/phasee01/: uflow_e01_unified_transfer_smoke.py
examples/phasee02/: uflow_e02_service_owned_transfer_smoke.py
examples/phasee03/: run_e03_chunk_pipeline_remote.sh  run_e03_direct_fastpath_matrix_remote.sh  run_e03_size_sweep_remote.sh  uflow_e03_chunk_pipeline_bench.py  uflow_e03_ddr_strategy_bench.py
examples/phasee04/: uflow_monitor_seed_ddr.py
examples/phasee05/: run_default_direct_matrix_remote.sh  run_hotpath_saturation_remote.sh  uflow_e05_hotpath_saturation.py
examples/phasee06/: uflow_e06_phasee05_trace_from_logs.py
examples/phasee08/: run_low_overhead_executor_remote.sh  uflow_e08_low_overhead_executor.py
plan/: Phase0-CANN-acl-manual-reference.md  data_service_architecture_report.html  data_service_framework_scope.md  uflow_architecture_report.html  uflow_ddr_hbm_transfer_flow_report.html  uflow_framework_scope.md  uflow_overall_architecture.html  uflow_phasea_progress_report.html
results/phasea08_serving_direct_20260623/: qwen_decode_keepresident_performance_summary.md  qwen_decode_keepresident_trace_events.json  qwen_decode_keepresident_transfer_timeline.csv  qwen_prefill_performance_summary.md
results/phasea08_submit_opt_20260623/: decode_keepresident_performance_summary.md  decode_keepresident_summary.txt  decode_keepresident_trace_events.json  decode_keepresident_transfer_timeline.csv  prefill_auto_performance_summary.md  prefill_auto_summary.txt  prefill_auto_trace_events.json  prefill_serial_performance_summary.md  prefill_serial_summary.txt  prefill_serial_trace_events.json
results/phasee03_h2d_memfd_fastpath_20260622_122124/: h2d_stage_summary.csv  h2d_stage_summary.json  h2d_stage_trace.json  summary.md
results/phasee06_h2d_stage_20260622_114126/: h2d_stage_summary.csv  h2d_stage_summary.json  h2d_stage_trace.json  summary.md
results/phasee06_runtime_analysis/: README.md  phasee05_selection_analysis_chrome_trace.json  phasee05_selection_summary.csv
results/phasee08_low_overhead_executor_20260630_201609/: benchmark.stdout  direct_executor_summary.csv  environment.txt  npu_smi_after.txt  npu_smi_before.txt  summary.md
results/phasee_direct_default_20260622/: communication_gap_report.md  summary.md
scripts/: phasea_run_tests.sh
tools/: uflow_monitor_api.py
tools/phasee04/: uflow_monitor_local.sh  uflow_monitor_machine2_local_setup.sh
ui/uflow-monitor/: app.js  index.html  styles.css
(+61 files in other folders)
